@@ -5,7 +5,7 @@ INSERT OR REPLACE INTO LocalizedText
   '[ICON_ProductionQueue] Botanist in Latin America patch',
   'en_US' ),
 ( 'LOC_LMPT4U_BOTANISTINLATINAMERICA_CONFIG_DESC',
-  '[COLOR:SuzerainDark]Mod: Botanist[ENDCOLOR] (by AOM)[NEWLINE][ICON_ProductionQueue] Compatibility patch by H.Humpel.[NEWLINE][NEWLINE]This patch lets the botanist use the ressources from the "Latin American Resources" mod.',
+  '[COLOR:SuzerainDark]Mod: Botanist[ENDCOLOR] (by AOM)[NEWLINE][ICON_ProductionQueue] Compatibility patch by H.Humpel.[NEWLINE][NEWLINE]This patch lets the botanist use the resources from the "Latin American Resources" mod.',
   'en_US' ),
 ( 'LOC_LMPT4U_BOTANISTINLATINAMERICA_CONFIG_NAME',
   '[ICON_ProductionQueue] Botaniker in Lateinamerika Patch',
